# sakatsuku04

./: .gitignore  README.md  Saka04Editor.spec  launcher.py  out.txt  package.json  pnpm-lock.yaml  pyinstaller.py  pyproject.toml  requirements.txt  ruff.toml  versions.txt
.github/workflows/: build-mac.yml  build-windows.yml  release.yml
assets/: README.txt
docs/: pine_standard.md  save_file_format_analysis.md
resource/: grow_type.csv  players.csv  players_green.csv  scout_ability.csv  scouts.csv  skill_jp.csv
resources/: ability.csv  coaches.csv  players.csv  players_zh.csv  regions.csv  status_win_jp.json  status_win_zh.json  teams.csv
src/: bit_stream.py  const.py  crc.py  crc_ecc.py  enc_dec.py  game_data_reader.py  game_data_view.py  main_frame.py  memcard_reader.py  memcard_view.py  models.py  readers.py  save_reader.py  utils.py  version.py
src/sakatsuku04/: 1.py  constants.py  crc.py  data_reader.py  dtos.py  ex.py  example.py  io.py  main.py  memcard_reader.py  memcard_view.py  models.py  objs.py  save_reader.py  utils.py
src/sakatsuku04/binreader/: bcoach_reader.py  bplayer_reader.py  bscout_reader.py
src/sakatsuku04/libs/: libpine_c.dylib
src/sakatsuku04/pcsx2reader/: models.py  readers.py
src/sakatsuku04/resource/: bcoachs_jp.csv  bcoachs_zh.csv  bplayers_jp.csv  bplayers_zh.csv  bplayers_zh18.csv  bscouts_jp.csv  bscouts_zh.csv  cn.csv  cn18.csv  jp.csv  mcoach_eval_jp.json  mcoach_eval_zh.json  player_eval_jp.json  player_eval_zh.json  scout_eval_jp.json  scout_eval_zh.json  sp_comments_jp.json  sp_comments_zh.json  sp_comments_zh18.json
src/sakatsuku04/savereader/: bit_stream.py  crc.py  enc_dec.py  entry_reader.py  memcard_reader.py  models.py  readers.py
webview/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
webview/src/: app.css  app.d.ts
webview/src/lib/: globalState.svelte.ts  models.ts  utils.ts
webview/src/locales/: abil_eval_jp.json  abil_eval_zh.json  ability_jp.json  (+48 more)
(+68 files in other folders)
