[project]
name = "saka04-editor"
version = "1.0.10"
description = "Open-source real-time game trainer and save editor for J.League Pro Soccer Club o Tsukurou! 04 (サカつく04)."
authors = [{ name = "Lei", email = "caol64@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "pywebview>=5.4",
    "pydantic>=2.11.7",
    "ps2mc>=0.1.1",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Environment :: MacOS X :: Cocoa",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities"
]

[project.optional-dependencies]
dev = [
    "pyinstaller==6.11.1",
    "build==1.2.2"
]

[project.scripts]
Saka04Editor = "sakatsuku04.main:main"

[project.urls]
Homepage = "https://github.com/caol64/sakatsuku04"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/data", "/docs", "/resources", "/assets", "tools"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/sakatsuku04",
    "/README.md",
    "/pyproject.toml",
    "/webview",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sakatsuku04"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyinstaller]
app_name = "Saka04Editor"
entry_point = "launcher.py"
onefile = true
windowed = true
add_data = [
    "src/sakatsuku04/resource:sakatsuku04/resource",
    "src/sakatsuku04/libs:sakatsuku04/libs",
    "webview/build:sakatsuku04/resource/webview/build",
    "pyproject.toml:sakatsuku04/resource",
]
